# bizfindr

./: .gitignore  .pre-commit-config.yaml  API_DOCS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SETUP.md  docker-compose.yml  requirements-dev.txt
.github/workflows/: ci-cd.yml
backend/: .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt  wsgi.py
backend/app/: __init__.py  app.py
backend/app/api/: __init__.py
backend/app/api/v1/: api.py
backend/app/core/: cache.py  celery_app.py  celery_config.py  config.py  logging.py  logging_config.py  rate_limiting.py
backend/app/core/errors/: handlers.py
backend/app/main/: __init__.py
backend/app/middleware/: __init__.py
backend/app/schemas/: business.py
backend/app/services/: business_service.py  data_fetcher.py  scheduler.py
backend/app/tasks/: __init__.py  cleanup.py  metrics.py  notifications.py
backend/scripts/: celery_beat.sh  celery_worker.sh  init_db.py  start.sh
frontend/static/css/: style.css
frontend/static/js/: main.js
frontend/templates/: about.html  base.html  index.html  maintenance.html  registration_detail.html  search.html
frontend/templates/errors/: 404.html  500.html  generic.html
monitoring/: docker-compose.yml
monitoring/alertmanager/: alertmanager.yml
monitoring/blackbox/: blackbox.yml
monitoring/grafana/provisioning/dashboards/: bizfindr-dashboard.json  dashboards.yml
monitoring/prometheus/: alert.rules  prometheus.yml
scripts/: setup.bat  setup.sh  start.bat  start.sh  stop.bat  stop.sh
tests/: conftest.py  test_api.py  test_services.py
