[tool.poetry]
name = "bizfindr-backend"
version = "0.2.0"
description = "BizFindr Backend API"
authors = ["BizFindr Team <dev@bizfindr.example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.9,<3.13"

# Core
Flask = "^2.3.3"
python-dotenv = "^1.0.0"
pymongo = "^4.5.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
pytz = "^2023.3"

# Redis
redis = "^5.0.1"

# API
flask-restx = "^1.1.0"
flask-cors = "^4.0.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Data Processing
pandas = "^2.0.3"
numpy = "^1.26.0"

# Utilities
python-slugify = "^8.0.1"
email-validator = "^2.0.0"
python-multipart = "^0.0.6"

# Async
asgiref = "^3.7.2"
httpx = "^0.24.1"

# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"
pytest-asyncio = "^0.21.1"

# Development
black = {version = "^23.7.0", optional = true}
flake8 = {version = "^6.1.0", optional = true}
isort = {version = "^5.12.0", optional = true}
mypy = {version = "^1.5.0", optional = true}
pre-commit = {version = "^3.3.3", optional = true}
pydantic = "^2.11.7"
pydantic-settings = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[flake8]
max-line-length = 88
extend-ignore = "E203, W503"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"
per-file-ignores = "__init__.py: F401"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=app --cov-report=term-missing"
asyncio_mode = "auto"

[poetry.scripts]
bizfindr = "app.main:main"
